# homebrew-remarkable

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  release.yml
Formula/: remarkable.rb
src/: cli.ts  client.rs  config.rs  error.rs  main.rs  sync.rs
src/adapters/: FileAdapter.ts  NodeFileAdapter.ts
src/commands/: init.rs  init.ts  mod.rs  reset.rs  reset.ts  status.rs  status.ts  sync.rs  sync.ts
src/config/: store.ts
src/core/: MarkdownGenerator.ts  PdfGenerator.ts  RemarkableClient.ts  SyncEngine.ts  SyncLogger.ts  types.ts
