[package]
name = "remarkable"
version = "0.1.0"
edition = "2021"
description = "Production-ready Rust CLI for syncing reMarkable documents locally"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
dirs = "6"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "1"
uuid = { version = "1", features = ["v4"] }

